--- a/source/index.html
+++ b/source/index.html
@@ -5,12 +5,13 @@
 {% block main %}
 <main class="main-container">
 	<section class="cat-energy-description">
+		<div class="page__centerer">
 		<h1 class="cat-energy-description__title">Функциональное
 			питание для котов</h1>
 		<p class="cat-energy-description__text">Занялся собой? Займись котом!</p>
 		<a class="cat-energy-description__button button" href="form.html">подобрать программу</a>
 		<img class="cat-energy-description_img" src="http://placekitten.com/280/270" width="552" height="449" alt="Корм Cat energy pro со вкусом курицы.">
-	</section>
+		</div></section>
 	<ul class="program-type page__centerer">
 		<li class="program-type__card program-type__card--slim">
 			<h2 class="program-type__card-title">Похудение</h2>
@@ -46,7 +47,8 @@
 		</ul>
 	</section>
 	<section class="example">
-
+		<div class="example__wrapper page__centerer">
+		<div class="example__text-wrapper">
 		<h2 class="example__title">Живой пример</h2>
 		<p class="example__description">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
 		<dl class="example__result-list">
@@ -63,6 +65,7 @@
 				<dd class="example__result-number example__result-number--total">15 000 РУБ.</dd>
 			</div>
 		</dl>
+		</div>
 
 
 		<div class="example__slider before-after-slider">
@@ -70,9 +73,9 @@
 			<button class="before-after-slider__button" type="button"></button>
 			<img class="before-after-slider__image before-after-slider__image--after" src="http://placekitten.com/280/256" alt="Худой кот после похудения.">
 		</div>
-		</section>
-	<section class="cooperation">
-		<div class="cooperation__adress-wrapper">
+		</div></section>
+	<section class="cooperation ">
+		<div class="cooperation__adress-wrapper page__centerer">
 		<h2 class="cooperation__title">приглашаем
 			к сотрудничеству
 			дилеров!</h2>
@@ -84,4 +87,5 @@
 		</div>
 	</section>
 </main>
+
 {% endblock %}
