--- a/source/index.html
+++ b/source/index.html
@@ -4,14 +4,15 @@
 
 {% block main %}
 <main class="main-container">
-	<section class="cat-energy-description">
-		<div class="page__centerer">
+	<section class="cat-energy-description page__centerer">
+<div class="cat-energy-description__wrapper">
 		<h1 class="cat-energy-description__title">Функциональное
 			питание для котов</h1>
 		<p class="cat-energy-description__text">Занялся собой? Займись котом!</p>
 		<a class="cat-energy-description__button button" href="form.html">подобрать программу</a>
-		<img class="cat-energy-description_img" src="http://placekitten.com/280/270" width="552" height="449" alt="Корм Cat energy pro со вкусом курицы.">
-		</div></section>
+</div>
+		<img class="cat-energy-description__img" src="http://placekitten.com/280/270" width="552" height="449" alt="Корм Cat energy pro со вкусом курицы.">
+	</section>
 	<ul class="program-type page__centerer">
 		<li class="program-type__card program-type__card--slim">
 			<h2 class="program-type__card-title">Похудение</h2>
@@ -48,39 +49,39 @@
 	</section>
 	<section class="example">
 		<div class="example__wrapper page__centerer">
-		<div class="example__text-wrapper">
-		<h2 class="example__title">Живой пример</h2>
-		<p class="example__description">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
-		<dl class="example__result-list">
-			<div class="example__result-item">
-				<dt class="example__result-description">Снижение веса</dt>
-				<dd class="example__result-number">5 кг</dd>
+			<div class="example__text-wrapper">
+				<h2 class="example__title">Живой пример</h2>
+				<p class="example__description">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
+				<dl class="example__result-list">
+					<div class="example__result-item">
+						<dt class="example__result-description">Снижение веса</dt>
+						<dd class="example__result-number">5 кг</dd>
+					</div>
+					<div class="example__result-item">
+						<dt class="example__result-description">Затрачено времени</dt>
+						<dd class="example__result-number">60 дней</dd>
+					</div>
+					<div class="example__result-item example__result-item--total ">
+						<dt class="example__result-description example__result-description--total">Затраты на питание:</dt>
+						<dd class="example__result-number example__result-number--total">15 000 РУБ.</dd>
+					</div>
+				</dl>
 			</div>
-			<div class="example__result-item">
-				<dt class="example__result-description">Затрачено времени</dt>
-				<dd class="example__result-number">60 дней</dd>
-			</div>
-			<div class="example__result-item example__result-item--total ">
-				<dt class="example__result-description example__result-description--total">Затраты на питание:</dt>
-				<dd class="example__result-number example__result-number--total">15 000 РУБ.</dd>
-			</div>
-		</dl>
-		</div>
 
-
-		<div class="example__slider before-after-slider">
-			<img class="before-after-slider__image before-after-slider__image--before" src="http://placekitten.com/280/256" alt="Толстый кот до похудения.">
-			<button class="before-after-slider__button" type="button"></button>
-			<img class="before-after-slider__image before-after-slider__image--after" src="http://placekitten.com/280/256" alt="Худой кот после похудения.">
+			<div class="example__slider before-after-slider">
+				<img class="before-after-slider__image before-after-slider__image--before" src="http://placekitten.com/280/256" alt="Толстый кот до похудения.">
+				<button class="before-after-slider__button" type="button"></button>
+				<img class="before-after-slider__image before-after-slider__image--after" src="http://placekitten.com/280/256" alt="Худой кот после похудения.">
+			</div>
 		</div>
-		</div></section>
+	</section>
 	<section class="cooperation ">
 		<div class="cooperation__adress-wrapper page__centerer">
-		<h2 class="cooperation__title">приглашаем
-			к сотрудничеству
-			дилеров!</h2>
-		<p class="cooperation__adress-adress">ул. Большая Конюшенная, д. 19/8
-			Санкт-Петербург</p>
+			<h2 class="cooperation__title">приглашаем
+				к сотрудничеству
+				дилеров!</h2>
+			<p class="cooperation__adress-adress">ул. Большая Конюшенная, д. 19/8
+				Санкт-Петербург</p>
 		</div>
 		<div class="cooperation__adress-map map">
 			<img class="map__image" src="http://placekitten.com/320/362" alt="#">
