fixes can picture

--- a/source/index.html
+++ b/source/index.html
@@ -5,22 +5,24 @@
 {% block main %}
 <main class="main-container">
 	<section class="cat-energy-description page__centerer">
-<div class="cat-energy-description__wrapper">
-		<h1 class="cat-energy-description__title">Функциональное
-			питание для котов</h1>
-		<p class="cat-energy-description__text">Занялся собой? Займись котом!</p>
-		<a class="cat-energy-description__button button" href="form.html">подобрать программу</a>
-</div>
+		<div class="cat-energy-description__wrapper">
+			<h1 class="cat-energy-description__title">Функциональное
+				питание для котов</h1>
+			<p class="cat-energy-description__text">Занялся собой? Займись котом!</p>
+			<a class="cat-energy-description__button button" href="form.html">подобрать программу</a>
+		</div>
 		<picture>
-			<source type="image/avif" media="(min-width: 1140px)" srcset="img/can-desktop@1x.avif 1x, img/can-desktop@2x.avif 2x">
-			<source type="image/avif" media="(min-width:768px)" srcset="img/can-tablet@1x.avif 1x, img/can-tablet@2x.avif 2x">
-			<source type="image/webp" media="(min-width: 1140px)" srcset="img/can-desktop@1x.webp 1x, img/can-desktop@2x.webp 2x">
-			<source type="image/webp" media="(min-width:768px)" srcset="img/can-tablet@1x.webp 1x, img/can-tablet@2x.webp 2x">
-			<source srcset="img/can-desktop@1x.png 1x, img/can-desktop@2x.png 2x" media="(min-width:
-			1140px)">
-			<source srcset="img/can-tablet@1x.png 1x, img/can-tablet@2x.png 2x" media="(min-width:
-			768px)">
-			<img class="cat-energy-description__img" src="./img/can-mobile@1x.png" srcset="img/can-mobile@2x.png 2x" alt="Корм Cat Energy Pro со вкусом курицы">
+			<source type="image/avif" media="(min-width: 1280px)" srcset="img/can-desktop@1x.avif 1x, img/can-desktop@2x.avif 2x" width="552" height="499">
+			<source type="image/avif" media="(min-width:768px)" srcset="img/can-tablet@1x.avif 1x, img/can-tablet@2x.avif 2x" width="709" height="609">
+			<source type="image/avif" media="(min-width:320px)" srcset="img/can-mobile@1x.avif 1x, img/can-mobile@2x.avif 2x" width="280" height="270">
+			<source type="image/webp" media="(min-width: 1280px)" srcset="img/can-desktop@1x.webp 1x, img/can-desktop@2x.webp 2x" width="552" height="499">
+			<source type="image/webp" media="(min-width:768px)" srcset="img/can-tablet@1x.webp 1x, img/can-tablet@2x.webp 2x" width="709" height="609">
+			<source type="image/webp" media="(min-width:320px)" srcset="img/can-mobile@1x.webp 1x, img/can-mobile@2x.webp 2x" width="280" height="270">
+			<source media="(min-width:
+			1280px)" srcset="img/can-desktop@1x.png 1x, img/can-desktop@2x.png 2x" width="552" height="499">
+			<source media="(min-width:
+			768px)" srcset="img/can-tablet@1x.png 1x, img/can-tablet@2x.png 2x" width="709" height="609">
+			<img class="cat-energy-description__img" src="./img/can-mobile@1x.png" srcset="img/can-mobile@2x.png 2x" width="280" height="270" alt="Корм Cat Energy Pro со вкусом курицы">
 		</picture>
 	</section>
 	<ul class="program-type page__centerer">
