--- a/source/catalog.html
+++ b/source/catalog.html
@@ -14,7 +14,7 @@
 							500 г</h3>
 					</a>
 					<a class="product-card__link-img" href="#">
-						<img class="product-card__img" src="http://placekitten.com/140/112" alt="">
+						{% include "templates/picture.twig" with {name: "1", class: "product-card__img", alt: "Банка корма Cat Energy Pro."} %}
 					</a>
 					<div class="product-card__description">
 						<p class="product-card__description-item">Масса</p>
@@ -32,7 +32,7 @@
 				<a class="product-card__link" href="#">
 					<h3 class="product-card__label">Cat Energy PRO
 						1000 г</h3>
-					<img class="product-card__img" src="http://placekitten.com/140/112" alt="">
+						{% include "templates/picture.twig" with {name: "2", class: "product-card__img", alt: "Банка корма Cat Energy Pro."} %}
 				</a>
 				<div class="product-card__description">
 					<p class="product-card__description-item">Масса</p>
@@ -49,7 +49,7 @@
 				<a class="product-card__link" href="#">
 					<h3 class="product-card__label">Cat Energy PRO
 						500 г</h3>
-					<img class="product-card__img" src="http://placekitten.com/140/112" alt="">
+						{% include "templates/picture.twig" with {name: "3", class: "product-card__img", alt: "Банка корма Cat Energy Pro."} %}
 				</a>
 				<div class="product-card__description">
 					<p class="product-card__description-item">Масса</p>
@@ -66,7 +66,7 @@
 				<a class="product-card__link" href="#">
 					<h3 class="product-card__label">Cat Energy PRO
 						1000 г</h3>
-					<img class="product-card__img" src="http://placekitten.com/140/112" alt="">
+						{% include "templates/picture.twig" with {name: "4", class: "product-card__img", alt: "Банка корма Cat Energy Pro."} %}
 				</a>
 				<div class="product-card__description">
 					<p class="product-card__description-item">Масса</p>
@@ -83,7 +83,7 @@
 				<a class="product-card__link" href="#">
 					<h3 class="product-card__label">Cat Energy slim
 						500 г</h3>
-					<img class="product-card__img" src="http://placekitten.com/140/112" alt="">
+						{% include "templates/picture.twig" with {name: "5", class: "product-card__img", alt: "Банка корма Cat Energy Pro."} %}
 				</a>
 				<div class="product-card__description">
 					<p class="product-card__description-item">Масса</p>
@@ -100,7 +100,7 @@
 				<a class="product-card__link" href="#">
 					<h3 class="product-card__label">Cat Energy slim
 						1000 г</h3>
-					<img class="product-card__img" src="http://placekitten.com/140/112" alt="">
+						{% include "templates/picture.twig" with {name: "6", class: "product-card__img", alt: "Банка корма Cat Energy Pro."} %}
 				</a>
 				<div class="product-card__description">
 					<p class="product-card__description-item">Масса</p>
@@ -117,7 +117,7 @@
 				<a class="product-card__link" href="#">
 					<h3 class="product-card__label">Cat Energy slim
 						500 г</h3>
-					<img class="product-card__img" src="http://placekitten.com/140/112" alt="">
+						{% include "templates/picture.twig" with {name: "7", class: "product-card__img", alt: "Банка корма Cat Energy Pro."} %}
 				</a>
 				<div class="product-card__description">
 					<p class="product-card__description-item">Масса</p>
@@ -195,6 +195,7 @@
 				Санкт-Петербург</p>
 		</div>
 		<div class="cooperation__adress-map map">
+			{% include "templates/picture.twig" with {name: "map", class: "map__img", alt: "Точка на карте по адресу Санкт-Петербург, ул. Большая Конюшенная, д. 19/8."} %}
 			<iframe class="map__iframe" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037872586862!2d30.320853351538165!3d59.93871648178723!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1672084773520!5m2!1sru!2sru" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		</div>
 	</section>
