fixes product-card images

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -14,7 +14,7 @@
 							500 г</h3>
 					</a>
 					<a class="product-card__link-img" href="#">
-						{% include "templates/picture.twig" with {name: "1", class: "product-card__img", alt: "Банка корма Cat Energy Pro."} %}
+						{% include "templates/picture.twig" with {name: "products/1", class: "product-card__img", alt: "Банка корма Cat Energy Pro."} %}
 					</a>
 					<div class="product-card__description">
 						<p class="product-card__description-item">Масса</p>
@@ -32,7 +32,7 @@
 				<a class="product-card__link" href="#">
 					<h3 class="product-card__label">Cat Energy PRO
 						1000 г</h3>
-						{% include "templates/picture.twig" with {name: "2", class: "product-card__img", alt: "Банка корма Cat Energy Pro."} %}
+						{% include "templates/picture.twig" with {name: "products/2", class: "product-card__img", alt: "Банка корма Cat Energy Pro."} %}
 				</a>
 				<div class="product-card__description">
 					<p class="product-card__description-item">Масса</p>
@@ -49,7 +49,7 @@
 				<a class="product-card__link" href="#">
 					<h3 class="product-card__label">Cat Energy PRO
 						500 г</h3>
-						{% include "templates/picture.twig" with {name: "3", class: "product-card__img", alt: "Банка корма Cat Energy Pro."} %}
+						{% include "templates/picture.twig" with {name: "products/3", class: "product-card__img", alt: "Банка корма Cat Energy Pro."} %}
 				</a>
 				<div class="product-card__description">
 					<p class="product-card__description-item">Масса</p>
@@ -66,7 +66,7 @@
 				<a class="product-card__link" href="#">
 					<h3 class="product-card__label">Cat Energy PRO
 						1000 г</h3>
-						{% include "templates/picture.twig" with {name: "4", class: "product-card__img", alt: "Банка корма Cat Energy Pro."} %}
+						{% include "templates/picture.twig" with {name: "products/4", class: "product-card__img", alt: "Банка корма Cat Energy Pro."} %}
 				</a>
 				<div class="product-card__description">
 					<p class="product-card__description-item">Масса</p>
@@ -83,7 +83,7 @@
 				<a class="product-card__link" href="#">
 					<h3 class="product-card__label">Cat Energy slim
 						500 г</h3>
-						{% include "templates/picture.twig" with {name: "5", class: "product-card__img", alt: "Банка корма Cat Energy Pro."} %}
+						{% include "templates/picture.twig" with {name: "products/5", class: "product-card__img", alt: "Банка корма Cat Energy Pro."} %}
 				</a>
 				<div class="product-card__description">
 					<p class="product-card__description-item">Масса</p>
@@ -100,7 +100,7 @@
 				<a class="product-card__link" href="#">
 					<h3 class="product-card__label">Cat Energy slim
 						1000 г</h3>
-						{% include "templates/picture.twig" with {name: "6", class: "product-card__img", alt: "Банка корма Cat Energy Pro."} %}
+						{% include "templates/picture.twig" with {name: "products/6", class: "product-card__img", alt: "Банка корма Cat Energy Pro."} %}
 				</a>
 				<div class="product-card__description">
 					<p class="product-card__description-item">Масса</p>
@@ -117,7 +117,7 @@
 				<a class="product-card__link" href="#">
 					<h3 class="product-card__label">Cat Energy slim
 						500 г</h3>
-						{% include "templates/picture.twig" with {name: "7", class: "product-card__img", alt: "Банка корма Cat Energy Pro."} %}
+						{% include "templates/picture.twig" with {name: "products/7", class: "product-card__img", alt: "Банка корма Cat Energy Pro."} %}
 				</a>
 				<div class="product-card__description">
 					<p class="product-card__description-item">Масса</p>
