--- a/source/index.html
+++ b/source/index.html
@@ -75,7 +75,9 @@
 			</div>
 		</div>
 	</section>
-	<section class="cooperation ">
+
+	<section class="cooperation">
+		<h2>happy new year</h2>
 		<div class="cooperation__adress-wrapper page__centerer">
 			<h2 class="cooperation__title">приглашаем
 				к сотрудничеству
