--- a/source/index.html
+++ b/source/index.html
@@ -15,12 +15,12 @@
 	</section>
 	<ul class="program-type page__centerer">
 		<li class="program-type__card program-type__card--slim">
-			<h2 class="program-type__card-title">Похудение</h2>
+			<h2 class="program-type__card-title program-type__card-title--slim">Похудение</h2>
 			<p class="program-type__card-description">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
 			<a class="program-type__card-button" href="catalog.html">каталог slim</a>
 		</li>
 		<li class="program-type__card program-type__card--pro">
-			<h2 class="program-type__card-title">Набор массы</h2>
+			<h2 class="program-type__card-title program-type__card-title--pro">Набор массы</h2>
 			<p class="program-type__card-description">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
 			<a class="program-type__card-button" href="catalog.html">Каталог pro</a>
 		</li>
