--- a/source/index.html
+++ b/source/index.html
@@ -6,7 +6,7 @@
 <main class="main-container">
 	<section class="cat-energy-description">
 		<div class="cat-energy-description__wrapper">
-			<h1 class="cat-energy-description__title">Функциональное
+			<h1 class="cat-energy-description__title">Функциональное<br>
 				питание для котов</h1>
 			<p class="cat-energy-description__text">Занялся собой? Займись котом!</p>
 			<a class="cat-energy-description__button button page__centerer" href="form.html">подобрать программу</a>
