add fixes for cat-energy-description

--- a/source/form.html
+++ b/source/form.html
@@ -27,7 +27,7 @@
 				</div>
 			</fieldset>
 			<fieldset class="program-goal">
-				<div class="page__centerer program-goal-wrapper-desktop">
+				<div class="page__centerer program-goal-wrapper-desktop rogram-goal-wrapper">
 					<div class="program-goal-wrapper">
 				<legend class="visually-hidden">Цель программы</legend>
 				<label class="program-goal__item-label"><input class="program-goal__item" type="radio" name="program-goal" value="lose weight" checked>Похудение
@@ -36,12 +36,12 @@
 				</label>
 				<label class="program-goal__item-label"><input class="program-goal__item" type="radio" name="program-goal" value="I don't know">Не знаю (Нужен ваш совет)
 				</label></div>
-				</div></fieldset>
+			</div></fieldset>
 		</div>
 		<fieldset class="contacts">
 			<div class="page__centerer">
-			<legend class="contacts__title extra-form-title">
-				Контактные данные (владельца кота)
+			<legend class="contacts__title extra-form-title"><span class="heading__decorated">
+				Контактные данные (владельца кота)</span>
 			</legend>
 			<div class="contacts__wrapper">
 				<div class="contacts__item">
@@ -55,12 +55,12 @@
 			</div>
 			</div></fieldset>
 		<div class="comment page__centerer">
-			<label class="comment__title extra-form-title" for="comment">Комментарий</label>
+			<label class="comment__title extra-form-title" for="comment"> <span class="heading__decorated">Комментарий</span></label>
 			<input class="comment__field field" name="comment" type="text" id="comment" placeholder="Расскажите обо всех повадках кота">
 		</div>
 		<fieldset class="additional">
 			<div class="page__centerer">
-			<legend class="additional__title  extra-form-title">Дополнительно</legend>
+			<legend class="additional__title  extra-form-title"><span class="heading__decorated">Дополнительно</span></legend>
 			<ul class="additional__product-list">
 				<li class="additional__product-item">
 					<label class="additional__product-title">
